sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:20: error: not found: value beforeRed
      swap(beforeRed, beforeWhite);
           ^